Front-end and fix the swipe bug on mobile

--- a/app/assets/stylesheets/components/_content.scss
+++ b/app/assets/stylesheets/components/_content.scss
@@ -12,32 +12,42 @@
   vertical-align: top;
   position: fixed;
   flex-grow: 1;
-  &__img{
-    object-fit: cover;
-    width: 100%;
-    height: 50vh;
-  }
-  &__infos{
-    background: $primary-color;
-    overflow: scroll;
-    @include margin-horizontal($gutter-size * 0.33);
-  }
-  &__post{
-    &__author{
+  &__media{
+    &__file{
+      object-fit: cover;
       width: 100%;
-      @include typography($font-size: $small-font-size, $color: $soft-text-color);
+      height: 50vh;
     }
   }
-  &__description{
-    @include typography($font-size: $small-font-size);
-    margin-bottom: $gutter-size * 0.33;
-  }
-  &__place{
-    @include typography($font-size: $small-font-size, $color: $soft-text-color);
-  }
-  &__info{
-    border-radius: $border-radius;
+  &__content{
+    flex-grow: 1;
+    background: $primary-color;
+    overflow: scroll;
     padding: $gutter-size * 0.5;
+    @include margin-horizontal($gutter-size * 0.33);
+    &__form{
+      &__inputs{
+        display: flex;
+        justify-content: space-around;
+        .form-control{
+          height: 7vh;
+          border-radius: $gutter-size * 2;
+        }
+      }
+      &__text{
+        @include typography($font-size: $title-font-size);
+        margin-bottom: $gutter-size * 0.5;
+        text-align: center;
+      }
+      .form-group{
+        width: 80%;
+      }
+    }
+  }
+  &__comment{
+    padding-bottom: $gutter-size * 0.5;
+    margin-bottom: $gutter-size * 0.25;
+    border-bottom: 1px solid $border-color;
     &__author{
       width: 100%;
       @include typography($font-size: $small-font-size, $color: $soft-text-color);
@@ -46,43 +56,6 @@
       @include typography($font-size: $small-font-size);
       margin-bottom: $gutter-size * 0.33;
     }
-    &__labels{
-      display: flex;
-    }
-    &__label{
-      @include padding-horizontal($gutter-size * 0.2);
-      @include padding-vertical($gutter-size * 0.1)
-      border-radius: $border-radius;
-      margin-bottom: $gutter-size * 0.33;
-      margin-right: $gutter-size * 0.2;
-      background: $container-color;
-      @include border-shadow($x:0, $y:0, $z:3px, $color: rgba(0,0,0,0.2));
-      width: fit-content;
-    }
-    &__bar{
-      margin-bottom: $gutter-size * 0.33;
-      color: $soft-text-color;
-      &__item{
-        margin-right: $gutter-size * 0.33;
-      }
-      .fas{
-        margin-right: $gutter-size * 0.1;
-      }
-    }
-    p{
-      margin-bottom: 0;
-    }
-  }
-  &__comments{
-    margin-right: $gutter-size * 0.5;
-    margin-left: $gutter-size * 0.5;
-  }
-  &__comment{
-    padding: $gutter-size * 0.5;
-    padding: 0px;
-    display: flex;
-    align-items: flex-start;
-    margin-bottom: $gutter-size;
     &__icon{
       margin-right: $gutter-size * 0.33;
       text-align: center;
@@ -92,6 +65,22 @@
       color: $soft-text-color;
       margin-top: 2px;
     }
+  }
+  &__labels{
+    display: flex;
+    &__label{
+      @include padding-horizontal($gutter-size * 0.2);
+      @include padding-vertical($gutter-size * 0.1);
+      border-radius: $border-radius;
+      margin-bottom: $gutter-size * 0.33;
+      margin-right: $gutter-size * 0.2;
+      background: $container-color;
+      @include border-shadow($x:0, $y:0, $z:3px, $color: rgba(0,0,0,0.2));
+      width: fit-content;
+    }
+  }
+  p{
+    margin-bottom: 0;
   }
   &__buttons{
     display: none;
